 2011-08-28 18:31  asfernandes 
   M src/dsql/StmtNodes.cpp
   M src/jrd/exe.h
   M src/jrd/met.epp
Fixed the padding of external procedure messages. Also removed obsolete checks in the touched code.

 2011-08-22 01:07  asfernandes 
   M builds/posix/Makefile.in
   M builds/posix/Makefile.in.examples
Correction for my last commit to make it work without gen's bin directory in the $PATH.

 2011-08-21 04:11  asfernandes 
   M builds/posix/Makefile.in
   M builds/posix/Makefile.in.examples
   M examples/empbuild/empbuild.e
Make Linux build faster.
It seems the usage of databases with FW=ON in ext4 filesystems mounted with barriers=1 (default) is very slow.
This change decreased build time in my machine from 2m41s to 1m21s.

 2011-08-20 13:25  mapopa 
   M src/misc/memtest.cpp
c file is now cpp 

 2011-08-18 06:53  robocop 
   M src/common/unicode_util.cpp
Misc.

 2011-08-13 17:07  asfernandes 
   M src/auth/trusted/AuthSspi.cpp
   M src/common/classes/ClumpletReader.h
   M src/jrd/jrd.cpp
Misc.

 2011-08-09 12:11  alexpeshkoff 
   M src/auth/AuthDbg.cpp
   M src/auth/AuthInterface.h
   M src/auth/SecurityDatabase/LegacyServer.cpp
   M src/auth/trusted/AuthSspi.cpp
   M src/common/Auth.cpp
   M src/common/Auth.h
   M src/common/classes/ClumpletReader.cpp
   M src/common/classes/ClumpletReader.h
   M src/common/classes/ClumpletWriter.cpp
   M src/common/classes/ClumpletWriter.h
   M src/jrd/jrd.cpp
   M src/jrd/svc.cpp
   M src/remote/server/server.cpp
Getting ready for support of multiple security databases in services

 2011-08-08 07:12  alexpeshkoff 
   M src/common/unicode_util.cpp
Misc

 2011-08-06 05:49  robocop 
   M src/common/unicode_util.cpp
   M src/jrd/par.cpp
Misc.

 2011-08-05 08:35  hvlad 
   M src/common/unicode_util.cpp
Correction : don't miss minor == 0 when trying ICU versions

 2011-08-05 02:21  asfernandes 
   M src/common/unicode_util.cpp
Use exception-safe code.

 2011-08-05 02:10  asfernandes 
   M src/common/ThreadStart.cpp