@@ -1,3 +1,8 @@
+ 2011-09-03 20:19  asfernandes 
+   M src/include/firebird/Message.h
+   M src/include/firebird/UdrCppEngine.h
+Make easier to use hardcoded messages.
+
  2011-08-28 18:31  asfernandes 
    M src/dsql/StmtNodes.cpp
    M src/jrd/exe.h
